--- a/alcashfbmeta.html
+++ b/alcashfbmeta.html
@@ -23,17 +23,17 @@
                     <meta property="og:type"               content="article" />
                     <meta property="og:title"              content="😱ggg hhh😱" />
                     <meta property="og:description"        content="1,950,350 Online Members" />
-                    <meta property="og:image"              content="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" />
+                    <meta property="og:image"              content="//myteenwebcam.com/fapp/gifs/208d7e13c49a32104d9c6660959d2549.gif" />
                     <meta property="og:image:type" content="image/jpeg" />
                     <meta property="og:image:width" content="650" />
                     <meta property="og:image:height" content="366" />
                     <meta name="twitter:card" content="summary_large_image" />
                     <meta name="twitter:description" content="" />
-                    <meta name="twitter:image" content="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" />
+                    <meta name="twitter:image" content="//myteenwebcam.com/fapp/gifs/208d7e13c49a32104d9c6660959d2549.gif" />
                     </head>
                     <body>
                     <h1>😱Quatuor en Afrique😱</h1>
-                    <p><img src="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" class="img-responsive"></p>
+                    <p><img src="//myteenwebcam.com/fapp/gifs/208d7e13c49a32104d9c6660959d2549.gif" class="img-responsive"></p>
                     <p></p>
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             
